nginx-forward-auth/app-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://identity.myapp.svc.cluster.local:8000/auth"
    nginx.ingress.kubernetes.io/auth-signin: "http://$host/signin"
    nginx.ingress.kubernetes.io/auth-response-headers: "X-User,X-Email,X-UserId"
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - backend:
          serviceName: persons
          servicePort: 8000
        path: /me
